fix: update padding for projects header and contacts on smaller screens

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -32,7 +32,7 @@
 
 .contact-link:hover {
 	color: var(--accent-primary);
-	transform: translateY(-0.75rem);
+	transform: translateY(-0.5rem);
 }
 
 .contact-description-container {
