--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -4,7 +4,7 @@
 	align-items: center;
 	max-width: 1000px;
 	margin-inline: auto;
-	margin-bottom: 3rem;
+	margin-bottom: 1rem;
 	padding-top: 5rem;
 }
 
@@ -18,7 +18,7 @@
 	justify-content: space-between;
 	padding-top: 3rem;
 	padding-bottom: 3rem;
-	margin-top: 6rem;
+	margin-top: 3rem;
 	margin-bottom: 6rem;
 }
 
@@ -265,13 +265,12 @@
 	.other-projects-section-title {
 		justify-content: center;
 		padding-top: 1rem;
-		margin-bottom: 1.5rem;
 	}
 
 	.featured-project-container {
 		flex-direction: column;
 		align-items: center;
-		margin-top: 3rem;
+		margin-top: 0rem;
 		margin-bottom: 3rem;
 		padding-top: 1.5rem;
 		padding-bottom: 0px;
